tests/ok/match-llvm.ari
enum Signal {
  Zero,
  One(i32),
  Two(i32),
}

fn score(value: Signal) -> i64 {
  match value {
    Zero => {
      return 1;
    }
    One(payload) => {
      return payload as i64;
    }
    Two(_) => {
      return 8;
    }
  }
}

fn main() -> i64 {
  return score(Zero) + score(One(3)) + score(Two(9));
}
