tests/errors/enum-payload-too-wide.ari
enum Wide {
  Value(string),
}

fn main() -> i64 {
  return 0;
}
